<resources>
    <string name="perfil_cantidad_productos_ppu_normal_dos_PAV">\u0020para un PAV.</string>
    <string name="text_profile_most_sold_products_pos">%d° %s</string>
    <string name="rdd_titulo_error_demanda">UPSS! NO PUDIMOS CONECTARNOS A INTERNET</string>
    <string name="rdd_subtitulo_error_informacion_demanda">Verifica tu conexión para visualizar la información.</string>
    <string name="rdd_subtitulo_error_perfil_demanda"><![CDATA[Verifica tu conexión para visualizar la información de tu&#160;]]></string>
    <string name="rdd_subtitulo_normal_error_demanda">Verifica tu conexión para visualizar la planificación de tus </string>
    <string name="rdd_subtitulo_bold_error_demanda">\u0020Socias Empresarias</string>
    <plurals name="perfil_cantidad_productos_ppu_normal_uno">
        <item quantity="one">En %s le faltó</item>
        <item quantity="other">En %s le faltaron</item>
    </plurals>
    <plurals name="perfil_cantidad_productos_ppu_bold_uno">
        <item quantity="one">\u0020%d producto</item>
        <item quantity="other">\u0020%d productos</item>
    </plurals>
    <plurals name="perfil_cantidad_productos_ppu_bold">
        <item quantity="one">\u0020%d producto</item>
        <item quantity="other">\u0020%d productos</item>
    </plurals>
    <string name="accept">Aceptar</string>
    <string name="mi_ruta_fragment_titulo">MI RUTA DE DESARROLLO</string>
    <string name="rdd_informacion_campania">%1$s %2$s</string>
    <string name="mi_ruta_tab_planificadas">Planificadas</string>
    <string name="mi_ruta_tab_no_planificadas">No planificadas</string>
    <string name="mi_ruta_titulo_item_seccion_no_planificadas">Contacta a %1$s</string>
    <string name="mi_ruta_planificar_seccion_no_planificadas">Planifica aquí</string>
    <string name="mi_ruta_planificar_tail_seccion_no_planificadas">&#160;esta visita</string>
    <string name="mi_ruta_header_seccion_eventos">AGREGAR EVENTO</string>
    <string name="mi_ruta_header_seccion_hoy">MIS VISITAS DE HOY</string>
    <string name="mi_ruta_header_seccion_no_programadas">No programadas</string>
    <string name="mi_ruta_header_seccion_no_planificadas">No planificadas</string>
    <string name="mi_ruta_header_seccion_candidatas_proactivas">Posibles consultoras proactivas</string>
    <string name="mi_ruta_header_seccion_candidatas_no_proactivas">Posibles consultoras no proactivas</string>
    <string name="mi_ruta_visita_registrada">Ya realizaste esta visita</string>
    <string name="mi_ruta_no_existen_planificadas">No tienes visitas planificadas</string>
    <string name="mi_ruta_feriado">Feriado</string>
    <string name="mi_ruta_contacta_a">Contacta a %1$s</string>
    <string name="mi_ruta_switch_on">Mapa</string>
    <string name="mi_ruta_switch_off">Lista</string>
    <string name="socia_exitosa">Exitosa</string>
    <string name="socia_no_exitosa">No exitosa</string>
    <string name="rdd_buscador_hint">Buscar por nombre o segmento</string>
    <string name="fragm_datetime_picker_title">%1$s - FECHA Y HORA</string>
    <string name="mi_ruta_datetime_picker_save">GUARDAR</string>
    <string name="mi_ruta_datetime_dia">DÍA</string>
    <string name="mi_ruta_datetime_hora">HORA</string>
    <string name="mi_ruta_datetime_date_separetor">/</string>
    <string name="mi_ruta_datetime_hour_separator">:</string>
    <string name="mi_ruta_eliminar_message">¿Estás segura que quieres eliminar a %1$s de tu calendario?</string>
    <string name="mi_ruta_eliminar_title_confirm">Has eliminado a %1$s de tu calendario correctamente</string>
    <string name="mi_ruta_eliminar_subtitle_confirm">Si quieres planificarla de nuevo, puedes encontrarla en No Planificadas</string>
    <string name="mi_ruta_eliminar_cancel">CANCELAR</string>
    <string name="mi_ruta_eliminar_confirm">ELIMINAR</string>
    <string name="mi_ruta_eliminar_ok">OK, ENTENDIDO</string>
    <string name="mi_ruta_registrar_visita_title">REGISTRAR VISITA</string>
    <string name="mi_ruta_registrar_visita_descripcion_pasa_pedido">¿|%1$s pasará pedido| esta campaña?</string>
    <string name="mi_ruta_replanificar_visita_success_title">HAS REPLANIFICADO TU VISITA CON ÉXITO</string>
    <string name="mi_ruta_planificar_visita_success_title">HAS PLANIFICADO TU VISITA CON ÉXITO</string>
    <string name="mi_ruta_planificar_visita_adicional_success_title">HAS PLANIFICADO UNA VISITA ADICIONAL</string>
    <string name="mi_ruta_replanificar_visita_success_fecha">La nueva fecha de visita es el %1$s</string>
    <string name="mi_ruta_planificar_visita_success_fecha">La fecha de visita es el %1$s</string>
    <string name="mi_ruta_replanificar_visita_success_hora">Hora: %1$s</string>
    <string name="mi_ruta_replanificar_visita_success_aceptar">OK, ENTENDIDO</string>
    <string name="mi_ruta_replanificar_visita_title">REPLANIFICA VISITA</string>
    <string name="mi_ruta_planificar_visita_title">PLANIFICA UNA VISITA</string>
    <string name="mi_ruta_registrar_visita_date">FECHA</string>
    <string name="mi_ruta_registrar_visita_hour">HORA</string>
    <string name="mi_ruta_registrar_visita_detail">DETALLE DE VISITA</string>
    <string name="mi_ruta_registrar_visita_cancel">CANCELAR</string>
    <string name="mi_ruta_registrar_visita_accept">REGISTRAR</string>
    <string name="mi_ruta_planificar_replanificar_adicionar_visita_accept">GUARDAR</string>
    <string name="mi_ruta_registrar_visita_date_value">%1$s&#160;&#160;/
        &#160;&#160;%2$s&#160;&#160;/&#160;&#160;%3$s&#160;&#160;</string>
    <string name="mi_ruta_registrar_visita_hour_separator">:</string>
    <string name="mi_ruta_registrar_visita_detalle">DETALLE DE LA VISITA</string>
    <string name="mi_ruta_registrar_visita_success">VISITA REGISTRADA</string>
    <string name="mi_ruta_registrar_visita_success_ok">ACEPTAR</string>
    <string name="mi_ruta_registrar_visita_error_obs">Debes seleccionar un detalle</string>
    <string name="mi_ruta_replanificar_accion">REPLANIFICAR</string>
    <string name="mi_ruta_planificar_accion">PLANIFICA</string>
    <string name="mi_ruta_replanificar_success_title">HAS REPLANIFICADO TU VISITA CON ÉXITO</string>
    <string name="mi_ruta_replanificar_success_subtitle">La nueva fecha de visita es %1$s Hora: %2$s</string>
    <string name="mi_ruta_fecha_invalida">Debes elegir una fecha posterior a la actual</string>
    <string name="mi_ruta_fecha_distinta_hoy">La fecha de registro debe ser hoy.</string>
    <string name="rdd_indicador_salidas">MIS VISITAS REALIZADAS</string>
    <string name="rdd_indicador_salidas_third_person">SUS VISITAS REALIZADAS</string>
    <string name="rdd_indicador_visitas_se">VISITAS DE LAS SOCIAS EMPRESARIAS</string>
    <string name="rdd_indicador_visitas_se_third_person">VISITAS DE SUS SOCIAS EMPRESARIAS</string>
    <string name="rdd_indicador_separador">/</string>
    <string name="rdd_dashboard_titulo">Rutas de desarrollo</string>
    <string name="rdd_dashboard_foco">Foco de Campaña:</string>
    <string name="rdd_dashboard_btn_ver_mi_ruta">Ver mi Ruta</string>
    <string name="rdd_dashboard_btn_ver_ruta">VER RUTA</string>
    <string name="rdd_dashboard_header_avance_socias">AVANCE DE LAS SOCIAS</string>
    <string name="rdd_dashboard_descoberturada">DESCOBERTURADA</string>
    <string name="rdd_dashboard_zona_descoberturada">ZONA %1$s - DESCOBERTURADA</string>
    <string name="rdd_dashboard_tab_avance">AVANCE DE ZONA</string>
    <string name="rdd_dashboard_tab_focos">FOCOS DE CAMPAÑA</string>
    <string name="rdd_dashboard_tab_mi_seccion">MI SECCIÓN</string>
    <string name="rdd_dashboard_tab_focos_titulo_seccion_coberturada">Sección %1$s - %2$s</string>
    <string name="rdd_dashboard_tab_focos_titulo_seccion_descoberturada">Sección %1$s - Descoberturada</string>
    <string name="rdd_dashboard_tab_focos_titulo_zona_coberturada">Zona %1$s - %2$s</string>
    <string name="rdd_dashboard_tab_focos_titulo_zona_descoberturada">Zona %1$s - Descoberturada</string>
    <string name="rdd_dashboard_tab_focos_titulo_region_coberturada">Región %1$s - %2$s</string>
    <string name="rdd_dashboard_tab_focos_titulo_region_descoberturada">Región %1$s - Descoberturada</string>
    <string name="rdd_asignacion_focos_titulo_focos">SELECCIONA LOS FOCOS PARA TU EQUIPO</string>
    <string name="rdd_asignacion_focos_titulo_focos_propios">SELECCIONA TUS FOCOS</string>
    <string name="rdd_asignacion_focos_titulo_personas">Asignar a:</string>
    <string name="rdd_asignacion_focos_titulo_detalle_personas">%1$s (Sección %2$s) - %3$s</string>
    <string name="rdd_dashboard_btn_asignar_foco">ASIGNAR FOCO</string>
    <string name="rdd_dashboard_focos_zona_titulo">FOCOS DE LAS SOCIAS</string>
    <string name="rdd_dashboard_focos_region_titulo">FOCOS DE MI EQUIPO</string>
    <string name="rdd_dashboard_btn_editar_focos_text">EDITAR</string>
    <string name="rdd_dashboard_btn_asignar_focos_text">ASIGNAR</string>
    <string name="rdd_dashboard_titulo_focos_campania">FOCOS DE NEGOCIO</string>
    <string name="rdd_dashboard_no_focos_habilidades">Aún no se han asignado</string>
    <string name="rdd_dashboard_alerta_focos_asignados">Focos asignados</string>
    <string name="rdd_dashboard_alerta_habilidades_asignadas">Habilidades asignadas</string>
    <string name="rdd_dashboard_alerta_visita_planificada">¡Visita planificada!</string>
    <string name="rdd_dashboard_title_new">¡Hola,%1$s!</string>
    <string name="rdd_dashboard_subtitle_new">Bienvenida a tu Ruta de Desarrollo</string>
    <string name="rdd_gz">Gerente de Zona</string>
    <string name="rdd_gz_zone">Zona: %1$s</string>
    <string name="rdd_gr_region">Región: %1$s</string>
    <string name="rdd_gz_section">Sección: %1$s</string>
    <string name="rdd_se_level">Nivel: %1$s</string>
    <string name="rdd_resultado_visitas_titulo">RESULTADO DE VISITAS</string>
    <string name="rdd_resultado_visitas_ver_lista">VER LISTA</string>
    <string name="rdd_resultado_visitas_cantidad_filtro">Resultados de tu búsqueda (%1$s)</string>
    <string name="rdd_lista_resultado_visitas_titulo_facturadas">FACTURARON</string>
    <string name="rdd_lista_resultado_visitas_titulo_no_facturadas">NO FACTURARON</string>
    <string name="rdd_lista_resultado_visitas_subtitulo_facturadas">Consultoras que facturaron en %1$s</string>
    <string name="rdd_lista_resultado_visitas_subtitulo_no_facturadas">Consultoras que aún no facturaron en %1$s</string>
    <string name="rdd_lista_resultado_visitas_codigo_digitoverificador">Código: %1$s</string>
    <string name="rdd_lista_resultado_visitas_monto_pedidoingresado">Pedido ingresado: %1$s</string>
    <string name="rdd_planificacionrapida_titulo">PLANIFICA TUS VISITAS</string>
    <string name="rdd_planificacionrapida_subtitulo">Planifica rápido y fácil. Te sugerimos visitar primero a las nuevas</string>
    <string name="rdd_planificacionrapida_orden_hint">ORDENADO POR:</string>
    <string name="rdd_planificacionrapida_orden_region">REGIÓN</string>
    <string name="campaign_focus">Foco de la campaña</string>
    <string name="acompaniamiento_subtitle">PROMUEVE LOS LANZAMIENTOS</string>
    <string name="watch_more">VER MÁS +</string>
    <string name="add_dream_title">Agregar sueño</string>
    <string name="what_your_dream_title">¿Cuál es su sueño?</string>
    <string name="time_to_accomplish">¿Cuánto necesita para lograrlo?</string>
    <string name="campaings_achieve">¿En cuantas campañas lo quiere lograr?</string>
    <string name="comments">Comentarios</string>
    <string name="add_comment">Agrega un comentario</string>
    <string name="dream_description">Describe tu sueño</string>
    <string name="save_dream">Guardar sueño</string>
    <string name="dream_delete_title">¿Quieres eliminar el sueño seleccionado?</string>
    <string name="dream_delete_cancel">No, dejar el sueño</string>
    <string name="dream_delete_confirm">Sí, eliminar el sueño</string>
</resources>