<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_rdd_success"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/content_inset_medium">

    <ImageView
        android:layout_width="@dimen/size_image_large"
        android:layout_height="@dimen/size_image_large"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_rdd_calendar_white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_inset_small"
        android:fontFamily="@font/mulish_bold"
        android:gravity="center"
        android:paddingStart="@dimen/content_inset_large"
        android:paddingEnd="@dimen/content_inset_large"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title_2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rdd_margin_min_less"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center"
        android:text="@string/mi_ruta_replanificar_visita_success_fecha"
        android:textColor="@color/white"
        android:textSize="@dimen/text_deault_size" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_inset_tiny"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center"
        android:text="@string/mi_ruta_replanificar_visita_success_hora"
        android:textColor="@color/white"
        android:textSize="@dimen/text_deault_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ok"
        style="@style/Widget.Button.OutlinedButton.Green.Variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_inset_normal"
        android:fontFamily="@font/mulish_bold"
        android:paddingStart="@dimen/rdd_margin_path_large"
        android:paddingEnd="@dimen/rdd_margin_path_large"
        android:text="@string/mi_ruta_replanificar_visita_success_aceptar"
        android:textColor="@color/white" />

</LinearLayout>
