<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_rdd">

    <ImageView
        android:id="@+id/iv_trash_icon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="@dimen/ds_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_trash" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_boton_confirmacion"
        android:layout_marginTop="@dimen/ds_margin_normal"
        android:layout_marginEnd="@dimen/margin_boton_confirmacion"
        android:gravity="center_horizontal"
        android:text="@string/dream_delete_title"
        android:textColor="@color/black"
        android:textSize="@dimen/indicator_detail_sub_value"
        app:fontFamily="@font/lato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_trash_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.Button.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_boton_confirmacion"
        android:layout_marginTop="@dimen/margin_boton_confirmacion"
        android:layout_marginEnd="@dimen/ds_margin_medium"
        android:layout_marginBottom="@dimen/ds_margin_large"
        android:text="@string/dream_delete_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/Widget.Button.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ds_margin_medium"
        android:layout_marginTop="@dimen/margin_boton_confirmacion"
        android:layout_marginEnd="@dimen/margin_boton_confirmacion"
        android:layout_marginBottom="@dimen/ds_margin_large"
        android:text="@string/dream_delete_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>


